fix: Overflow bugs on charts [WEB-842] (#5853)
* chart div is destroyed when !hasData
* hide tooltip when initially re-entering the chart + mousemove blink fix
* css overflow fixes
* clip too-tall tooltip
* legend, download button hidden when no data

--- a/webui/react/src/shared/styles/index.scss
+++ b/webui/react/src/shared/styles/index.scss
@@ -52,7 +52,8 @@ code.block {
   background-color: var(--theme-stage);
 }
 .u-wrap {
-  overflow-x: hidden;
+  overflow-x: visible;
+  overflow-y: hidden;
 }
 
 /* diamond cursor for most charts, see closestPointPlugin.module.scss for charts with that plugin (LearningCurve) */
